feat: add model.py

--- a/quic/s2n-quic-sim/model.ipynb
+++ b/quic/s2n-quic-sim/model.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.transformer import TransformerBlock, CausalAttention"
+    "from models.transformer import TransformerBlock, CausalAttention"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.time2vec import SineActivation, CosineActivation\n",
+    "from models.time2vec import SineActivation, CosineActivation\n",
     "\n",
     "VALID_T2V_ACTIVATION = [\"sin\", \"cos\"]"
    ]
